# tap-rest-api-msdk

./: CHANGELOG.md  README.md  config.sample.json  install.sh  mypy.ini  pyproject.toml  tap-rest-api-msdk.sh  tox.ini
.cursor/: CONVENTIONS.md  README.md  scratchpad.md
.cursor/agents/: ai-context-writer.md  architect.md  archivist.md  debug-specialist.md  implementer.md  researcher.md  task-decomposer.md
.cursor/commands/: bug-pipeline.md  commit.md  content_length.md  feature-pipeline.md  update_context.md
.cursor/rules/: content_length.mdc  development_practices.mdc  documentation.mdc  environment.mdc
.cursor/skills/ai-context-component/: SKILL.md
.cursor/skills/ai-context-patterns/: SKILL.md
.cursor/skills/ai-context-quick-reference/: SKILL.md
.cursor/skills/ai-context-repository/: SKILL.md
.cursor/workflows/: 1-investigate-bug.md  1-research-feature.md  2-plan-feature.md  2-research-bug.md  3-plan-bug-fix.md  3-task_list.md  4-bug-fix-tasks.md  4-feature-tasks.md  5-plan-task-bug.md  5-plan-task-feature.md  6-archive-bug-summary.md  6-archive-feature-summary.md  README.md  implement-feature.md  implement-fix.md  implement-task-feature.md  implement-task-fix.md
.github/workflows/: ci.yml  releases.yml
_archive/optional-flatten-config/: optional-flatten-config.md
_features/: optional-flatten-config.md
_features/optional-flatten-config/: optional-flatten-config-task-list.md
docs/AI_CONTEXT/: AI_CONTEXT_PATTERNS.md  AI_CONTEXT_QUICK_REFERENCE.md  AI_CONTEXT_REPOSITORY.md  AI_CONTEXT_tap_rest_api_msdk.md
tap_rest_api_msdk/: client.py  pagination.py  streams.py  tap.py
tests/: schema.json  test_404_end_of_stream.py  test_core.py  test_streams.py  test_tap.py
(+21 files in other folders)
