[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap-rest-api-msdk"
version = "1.5.0"
description = "`tap-rest-api-msdk` is a Singer tap for REST APIs, built with the Meltano SDK for Singer Taps (Pet Circle variant)."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Josh Lloyd" },
    { name = "Fred Reimer" },
]
keywords = ["ELT", "rest-api-msdk", "Meltano", "Singer", "REST", "API", "tap"]
classifiers = []
requires-python = ">=3.12"
urls = { homepage = "https://github.com/PawsForLife/tap-rest-api-msdk", repository = "https://github.com/PawsForLife/tap-rest-api-msdk" }
dependencies = [
    "requests>=2.25.1,<3",
    "singer-sdk>=0.53.0,<1",
    "genson>=1.2.2,<2",
    "atomicwrites>=1.4.0,<2",
    "requests-aws4auth>=1.2.3,<2",
    "boto3>=1.26.156,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2,<9",
    "tox>=4.15.1,<5",
    "ruff>=0.8.0,<1",
    "mypy>=1.10.0,<2",
    "types-requests>=2.25.8,<3",
    "requests-mock>=1.9.3,<2",
    "types-python-dateutil>=2.8.19.14",
]

[project.scripts]
tap-rest-api-msdk = "tap_rest_api_msdk.tap:TapRestApiMsdk.cli"

[tool.hatch.build.targets.wheel]
packages = ["tap_rest_api_msdk"]

[tool.ruff]
line-length = 88
exclude = [".*simpleeval.*"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "C90"]
ignore = ["C901", "D105", "D107", "D203", "D213", "D406", "D407", "D401", "D417", "E501"]
per-file-ignores = { "tests/*" = ["D100", "D102", "D103"] }

[tool.ruff.lint.isort]
known-first-party = ["tap_rest_api_msdk", "tests", "samples"]

[tool.mypy]
python_version = "3.12"
